--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" />
+  
 </head>
 <body>
   <h1>POS Invoice</h1>
@@ -11,7 +12,8 @@
       <div class="card-pos">
         <div class="bill-amount">
           <h2>Bill Amount</h2>
-          <input type="number" id="bill" placeholder="1000 $" required>
+          
+          <input type="number" id="bill" placeholder="1000 $" required><img src="icon/shop.svg" class="shop-icon" >
         </div>
 
         <div class="tips-amount">
@@ -30,6 +32,7 @@
         <div class="bill-amount">
           <h2>Number of People</h2>
           <input type="number" id="people" placeholder="2 person" class="people" required>
+          <img src="icon/people.svggir " class="shop-icon" >
         </div>
 
         <div class='reset-input-btn'>
