add icons fixed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="bill-amount">
           <h2>Number of People</h2>
           <input type="number" id="people" placeholder="2 person" class="people" required>
-          <img src="icon/people.svggir " class="shop-icon" >
+          <img src="icon/people.svg" class="shop-icon" >
         </div>
 
         <div class='reset-input-btn'>
