--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <div class="total-amount-desc">
             <h2 id="tipAmount">0.00<span> $</span></h2><br><br>
             <h2 id="totalPerPerson">0.00<span> $</span></h2><br><br>
-            <div><h2 id="totalAmount">0.00<span> $</span></h2></div>
           </div>
         </div>
+        <div class="hr-line"> <hr><h2 id="totalAmount">0.00<span> $</span></h2></div>
         <div>
           <input type="button" id="invoice" name="invoice" value="BILLING" required>
         </div>
