--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="bill-amount">
           <h2>Bill Amount</h2>
           
-          <input type="number" id="bill" placeholder="1000 $" required><img src="icon/shop.svg" class="shop-icon" >
+          <input type="number" min="0" id="bill" placeholder="1000 $" required><img src="icon/shop.svg" class="shop-icon" >
         </div>
 
         <div class="tips-amount">
